addded HomeMaker and fixed project title spacing

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -235,6 +235,10 @@ li{
   float: right;
 }
 
+.projtitle{
+  max-width: 50%;
+}
+
 .screenie{
   float: left;
   width: 50%;
